changing db cluster

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-MongoLink = "mongodb+srv://abhishekrajput:SmDafKmJcfC4HK4H@virtualgenesisdata.wbeqoft.mongodb.net/"
-MONGO_URI = "mongodb+srv://abhishekrajput:SmDafKmJcfC4HK4H@virtualgenesisdata.wbeqoft.mongodb.net/"
+MongoLink = "mongodb+srv://abhishekrajput:q9GPuwbD3v1Aa2uY@cluster0.nlzsqa3.mongodb.net/"
+MONGO_URI = "mongodb+srv://abhishekrajput:q9GPuwbD3v1Aa2uY@cluster0.nlzsqa3.mongodb.net/"
