--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MongoLink = "mongodb+srv://abhishekrajput:SmDafKmJcfC4HK4H@virtualgenesisdata.wbeqoft.mongodb.net/"
-MONGO_URI = mongodb+srv://abhishekrajput:SmDafKmJcfC4HK4H@virtualgenesisdata.wbeqoft.mongodb.net/
+MongoLink = "mongodb+srv://abhishekrajput:q9GPuwbD3v1Aa2uY@cluster0.nlzsqa3.mongodb.net/"
+MONGO_URI = mongodb+srv://abhishekrajput:q9GPuwbD3v1Aa2uY@cluster0.nlzsqa3.mongodb.net/
 ALCHEMY_HTTP_URL=https://base-mainnet.g.alchemy.com/v2/IMv8uQvQ8n6vDT5xQKW7y
